--- a/nr-add-examples/ig/bonnes_pratiques_modeler.html
+++ b/nr-add-examples/ig/bonnes_pratiques_modeler.html
@@ -582,7 +582,7 @@ Description: "Description de l'extension."
 Context: Sur quoi s'applique l'extension
 </code></pre>
 
-<h4 id="structuredefinition--logic">StructureDefinition : logic</h4>
+<h4 id="structuredefinition--modèle-logique">StructureDefinition : modèle logique</h4>
 
 <table class="grid">
   <thead>
@@ -892,7 +892,7 @@ Usage: #definition
 
       <div class="inner-wrapper">
         <p>
-          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Jan 5, 2026 14:26+0000">2026-01-05</span>
+          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Jan 5, 2026 14:27+0000">2026-01-05</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
